Fix overflow problem

--- a/src/pages/Index.module.scss
+++ b/src/pages/Index.module.scss
@@ -3,6 +3,8 @@
 
 .landing {
 	position: relative;
+	overflow: hidden;
+	height: 100%;
 	.topDecoration {
 		position: relative;
 		height: 35vh;
